--- a/style.css
+++ b/style.css
@@ -6,9 +6,27 @@
 
 body{
     background-color: hsl(0, 0%, 8%);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 #main{
     background-color: hsl(0, 0%, 12%);
-    
+    min-width: 300px;
+    width: 30%;
+}
+
+#img{
+    display: flex;
+    justify-content: center;
+}
+
+#img > img{
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
 }
